--- a/README.rdoc
+++ b/README.rdoc
@@ -12,9 +12,14 @@ Edgarj is an Ajax-based scaffold with:
   1. select columns and its order on view for list, form, and search-form
   1. overwrite partial-template for each list, form, and search-form
 
+== Version
+
+Edgarj 4.* for Rails 4
+Edgarj 0.* for Rails 3.2
+
 == Prerequisites
 
-* Rails 3.2 (because of our projects' rails version consistency).
+* Rails
 * external 'User' model.
 
 == KNOWN BUGS
