--- a/README.rdoc
+++ b/README.rdoc
@@ -40,11 +40,12 @@ Edgarj 0.* for Rails 3.2
 
 == Building Package
 
+1. make sure to increment lib/edgarj/version.rb
 1. check if all tests are passed:
     $ rake test
 1. commit any updated files.
 1. Gem package is built under pkg/edgarj-N.NN.NN.gem by:
     $ rake app:edgarj:build_gem
-1. commit Gemfile.lock since it is updated.
+1. commit Gemfile.lock when it is updated.
 1. puch the package to rubygems site by:
     $ gem push pkg/edgarj-N.NN.NN.gem
