--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,8 @@
+== 4.05.00
+
+* introduce Edgarj::Drawer::ColumnInfo::Base#field to support
+  per-column field control in FormField.
+
 == 4.04.01
 
 * fix: popup list <td> 'align'-attr doesn't work
